force-app/main/default/objects/BGR_Module_Spring__c/BGR_Module_Spring__c.object-meta.xml
<CustomObject>
    <label>BGR Module Spring</label>
    <nameField>
        <label>BGR Module Spring Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Module Spring</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>