force-app/main/default/objects/BGR_Module_Spring__c/fields/KITUPREQD__c.field-meta.xml
<CustomField>
    <fullName>KITUPREQD__c</fullName>
    <label>KITUPREQD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>