force-app/main/default/objects/BGR_Module_Spring__c/fields/MODULEPN__c.field-meta.xml
<CustomField>
    <fullName>MODULEPN__c</fullName>
    <label>MODULEPN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>