force-app/main/default/objects/BGR_Module_Spring__c/fields/QTY__c.field-meta.xml
<CustomField>
    <fullName>QTY__c</fullName>
    <label>QTY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>