force-app/main/default/objects/BGR_Module_Spring__c/fields/SETTINGUL__c.field-meta.xml
<CustomField>
    <fullName>SETTINGUL__c</fullName>
    <label>SETTINGUL</label>
    <precision>13</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>