force-app/main/default/objects/BGR_Module_Spring__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Model__c</columns>
    <columns>Size_Code__c</columns>
    <columns>SPRINGPNCODE__c</columns>
    <columns>MODULEPN__c</columns>
    <columns>NACE__c</columns>
    <columns>SETTINGLL__c</columns>
    <columns>SETTINGUL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>